[gd_scene load_steps=11 format=3 uid="uid://cpj5rtpiq5d5i"]

[ext_resource type="Script" path="res://Main/Data/Script/Building/stand_class.gd" id="1_nlceu"]
[ext_resource type="PackedScene" uid="uid://ciyfid66c5ied" path="res://Main/Data/Scene/package.tscn" id="2_13km2"]
[ext_resource type="Script" path="res://Main/Data/Scene/Building/sprite_handler.gd" id="3_o1w36"]
[ext_resource type="PackedScene" uid="uid://dp1xpv3nykfmd" path="res://Component/interactable_object_component.tscn" id="6_e73qv"]
[ext_resource type="Texture2D" uid="uid://bhff6vdh1dp4k" path="res://Asset/UI/stand_fill_under.png" id="7_0drwp"]
[ext_resource type="Texture2D" uid="uid://bcli2ewbjqy2p" path="res://Asset/UI/stand_fill_over.png" id="8_154de"]
[ext_resource type="Texture2D" uid="uid://ddojiert353um" path="res://Asset/UI/stand_fill_progress.png" id="9_bxwc5"]
[ext_resource type="Script" path="res://Main/Data/Script/fill_progressbar.gd" id="10_eks2w"]
[ext_resource type="Texture2D" uid="uid://dx3dgt6ub6k0t" path="res://Asset/32x32white.png" id="10_naxhi"]
[ext_resource type="Script" path="res://Component/orientation_component.gd" id="12_47ksi"]

[node name="Shelf" type="StaticBody2D" node_paths=PackedStringArray("interaction_marker") groups=["NavigationBlock"]]
y_sort_enabled = true
texture_filter = 1
collision_layer = 65
collision_mask = 64
script = ExtResource("1_nlceu")
package_scene = ExtResource("2_13km2")
interaction_marker = NodePath("InteractionMarker")

[node name="SpriteHandler" type="Node2D" parent="." node_paths=PackedStringArray("building_sprite", "fill_sprite")]
script = ExtResource("3_o1w36")
building_sprite = NodePath("BuildingSprite")
fill_sprite = NodePath("FillStatus")

[node name="BuildingSprite" type="Sprite2D" parent="SpriteHandler"]

[node name="FillStatus" type="Sprite2D" parent="SpriteHandler"]

[node name="ChangeColorTimer" type="Timer" parent="SpriteHandler"]
wait_time = 0.1
one_shot = true

[node name="South" type="CollisionShape2D" parent="." groups=["orientation_collision"]]

[node name="East" type="CollisionShape2D" parent="." groups=["orientation_collision"]]

[node name="North" type="CollisionShape2D" parent="." groups=["orientation_collision"]]

[node name="West" type="CollisionShape2D" parent="." groups=["orientation_collision"]]

[node name="InteractionObjectComponent" parent="." node_paths=PackedStringArray("main_object") groups=["Stand"] instance=ExtResource("6_e73qv")]
position = Vector2(0, -16)
collision_layer = 64
collision_mask = 0
monitoring = false
main_object = NodePath("..")

[node name="South" type="CollisionShape2D" parent="InteractionObjectComponent" groups=["orientation_collision"]]
debug_color = Color(0.27451, 1, 0.501961, 0.419608)

[node name="East" type="CollisionShape2D" parent="InteractionObjectComponent" groups=["orientation_collision"]]
debug_color = Color(0.27451, 1, 0.501961, 0.419608)

[node name="North" type="CollisionShape2D" parent="InteractionObjectComponent" groups=["orientation_collision"]]
debug_color = Color(0.27451, 1, 0.501961, 0.419608)

[node name="West" type="CollisionShape2D" parent="InteractionObjectComponent" groups=["orientation_collision"]]
debug_color = Color(0.27451, 1, 0.501961, 0.419608)

[node name="FillProgressbar" type="TextureProgressBar" parent="."]
z_index = 2
texture_filter = 1
offset_left = -19.0
offset_top = -48.0
offset_right = 19.0
offset_bottom = -37.0
max_value = 15.0
value = 15.0
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_under = ExtResource("7_0drwp")
texture_over = ExtResource("8_154de")
texture_progress = ExtResource("9_bxwc5")
script = ExtResource("10_eks2w")

[node name="ShowProgressTimer" type="Timer" parent="FillProgressbar"]
wait_time = 1.5
one_shot = true

[node name="OrientationComponent" type="Node2D" parent="." node_paths=PackedStringArray("sprite_handler", "interaction_marker", "rotation_node_list")]
script = ExtResource("12_47ksi")
sprite_handler = NodePath("../SpriteHandler")
interaction_marker = NodePath("../InteractionMarker")
rotation_node_list = [NodePath(".."), NodePath("../InteractionObjectComponent")]
orientation_group_string = "orientation_collision"

[node name="InteractionMarker" type="Marker2D" parent="."]
position = Vector2(0, 16)

[node name="Sprite2D" type="Sprite2D" parent="InteractionMarker"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("10_naxhi")

[connection signal="timeout" from="SpriteHandler/ChangeColorTimer" to="SpriteHandler" method="_on_change_color_timer_timeout"]
[connection signal="timeout" from="FillProgressbar/ShowProgressTimer" to="FillProgressbar" method="_on_show_progress_timer_timeout"]
